Add ListView.xml , Listview Activity And Adapter

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         tools:context="startings.galangarbis.com.bekupdua.MainActivity">
 
         <ImageView
+            android:id="@+id/imagesatu"
             android:layout_weight="0.4"
             android:layout_width="match_parent"
             android:layout_height="0dp"
